# nyc-taxi-etl-pipeline

./: .gitignore  DOCUMENTATION.md  README.md  pyproject.toml  requirements.txt
docs/: raw_schema.md
scripts/: explore_data.py  ingest.py
src/taxi_etl/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py  pipeline.py  reporting.py
src/taxi_etl/stages/: __init__.py  ingest.py  transform.py  validate.py
tests/: test_ingest.py  test_pipeline.py  test_reporting.py  test_transform.py  test_validate.py
